# LeJEPA-Currency-Detection

./: .gitignore  LeJEPA_Fake_Currency_Detection_Research.docx  LeJEPA_Project_Report.docx  README.md  implementation_plan.md  setup_guide.md  ~$JEPA_Fake_Currency_Detection_Research.docx
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: analyze.py  router.py  training.py
backend/app/features/: __init__.py  color_analysis.py  dimensions.py  security_thread.py  serial_number.py  texture_analysis.py  watermark.py
backend/app/ml/: classifier.py  dataset.py  device.py  inference.py  model_registry.py  trainer.py
backend/app/ml/lejepa/: __init__.py  encoder.py  masking.py  model.py  predictor.py  sigreg.py
backend/app/models/: __init__.py  analysis.py  training.py
backend/app/schemas/: __init__.py  analysis.py  training.py
backend/app/services/: analyzer.py  annotator.py  denomination.py  image_processor.py
backend/scripts/: evaluate.py  generate_paper.py  train.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisTable.tsx  CameraCapture.tsx  ImageUploader.tsx  InteractiveImage.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: HistoryPage.tsx  HomePage.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
